Splitted from dynacase-admin-uis (refs #4342)

--- a/Apps/ACCESS/ACCESS_init.php.in
+++ b/Apps/ACCESS/ACCESS_init.php.in
@@ -20,7 +20,7 @@ global $app_const;
 
 $app_const= array(
   "INIT" => "yes",
-  "VERSION"			=>"@VERSION_ACCESS@-@RELEASE_ACCESS@"
+  "VERSION"			=>"@VERSION@-@RELEASE@"
 );
 
 ?>
