--- a/Apps/ACCESS/ACCESS_init.php.in
+++ b/Apps/ACCESS/ACCESS_init.php.in
@@ -1,6 +1,11 @@
 <?php
+/*
+ * @author Anakeen
+ * @license http://www.fsf.org/licensing/licenses/agpl-3.0.html GNU Affero General Public License
+ * @package FDL
+ */
 /**
- * Application parameters 
+ * Application parameters
  *
  * @author Anakeen 2002
  * @version $Id: ACCESS_init.php.in,v 1.4 2003/08/18 15:46:41 eric Exp $
@@ -10,17 +15,14 @@
  */
 /**
  */
-
- /**
-  * Application parameters 
-  * @name $app_const
-  * @global array $GLOBALS['app_const'] 
-  */
+/**
+ * Application parameters
+ * @name $app_const
+ * @global array $GLOBALS['app_const']
+ */
 global $app_const;
 
-$app_const= array(
-  "INIT" => "yes",
-  "VERSION"			=>"@VERSION@-@RELEASE@"
+$app_const = array(
+    "INIT" => "yes",
+    "VERSION" => "@VERSION@-@RELEASE@"
 );
-
-?>
