--- a/Actions/ACCESS/Makefile
+++ b/Actions/ACCESS/Makefile
@@ -1,10 +1,10 @@
-# ============================================
-# $Id: Makefile,v 1.1 2002/01/08 12:41:33 eric Exp $
-# ============================================
-
-# get the new appname (basename in uppercase)
-appname = $(shell basename `pwd` | tr [a-z] [A-Z])
-
-export appname
+pages_html = $(patsubst %.html,$(pubdir)/$(style)/$(appname)/Layout/%.html,$(filter-out $(pages_not_html),$(wildcard *.html)))
 
 include $(utildir)/PubRule
+
+.PHONY: publish
+
+publish: $(pages_html)
+
+$(pubdir)/$(style)/$(appname)/Layout/%.html : %.html $(pubdir)/$(style)/$(appname)/Layout
+	$(installcp) $< $@
