feat(admin): continue token manager (refs #6628)

--- a/Actions/ACCESS/Makefile
+++ b/Actions/ACCESS/Makefile
@@ -1,10 +1,13 @@
 pages_html = $(patsubst %.html,$(pubdir)/$(style)/$(appname)/Layout/%.html,$(filter-out $(pages_not_html),$(wildcard *.html)))
+pages_json = $(patsubst %.json,$(pubdir)/$(style)/$(appname)/Layout/%.json,$(filter-out $(pages_not_json),$(wildcard *.json)))
 
 include $(utildir)/PubRule
 
 .PHONY: publish
 
-publish: $(pages_html)
+publish: $(pages_html) $(pages_json)
 
 $(pubdir)/$(style)/$(appname)/Layout/%.html : %.html $(pubdir)/$(style)/$(appname)/Layout
+	$(installcp) $< $@
+$(pubdir)/$(style)/$(appname)/Layout/%.json : %.json $(pubdir)/$(style)/$(appname)/Layout
 	$(installcp) $< $@
